--- a/Pages/HandyMan.html
+++ b/Pages/HandyMan.html
@@ -68,14 +68,14 @@
                     <div class="w-100" style="height: fit-content;">
                         <div class="home_txt text-white">
                             <span id="brand" class="h2 mb-0 slogan">T h e&nbsp;&nbsp;H a n d y M a n</span>
-                            <p id="slogan_txt" class="slogan" style="font-size: 2vw; text-align: center;">
+                            <p id="slogan_txt" class="h4" class="slogan" style="text-align: center;">
                                 Pour ceux qui osent
                             </p>
                         </div>
                     </div>
                     <div class="col" id="div_btn_rdv" style="height: max-content;">
                         <a href="#">
-                            <button id="btn_rdv" class="btn btn-outline-warning btn-lg" style="height: 6vw; width: 13vw; border-radius: 12px; font-size: 1.3vw;">
+                            <button id="btn_rdv" class="btn btn-outline-warning btn-lg h5" style="height: 93px; width: fit-content; border-radius: 12px;">
                                 Prendre rendez-vous
                             </button>
                         </a>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="flex-container">
                         <div class="text-white p-4 mb-4" style="text-align: center;">
-                            <p id="abt-us">HandyMan est une entreprise de stylisme spécialisée dans 
+                            <p id="abt-us" class="h6">HandyMan est une entreprise de stylisme spécialisée dans 
                                 dans la confection de vestes pour hommes (16+). Possédans 16 ans d'expérience 
                                 dans le domaine, la compagnie est aujourd'hui une incontournable du monde du stylisme
                                  dans la grande région d'Halifax et du Canada en général. Cette équipe passionée qui compte 
@@ -321,8 +321,8 @@
                                 <img src="../Images/stylistes/styliste1.jpg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Roberto</p>
-                                        <p style="font-size: 1.2vw;">Roberto est le handyman. Le fondateur. Il a étudié au London college of 
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Roberto</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Roberto est le handyman. Le fondateur. Il a étudié au London college of 
                                         fashion et c'est insatllé au Canada il y'a 18 ans pour y poursuivre sa carrière, et ainsi, fonda 
                                         HandyMan 2 ans plu tard. Son expertise et sa rigueur au travail font de lui un choix prisé de notre clientèle.
                                         C'est le maitre.</p>
@@ -336,8 +336,8 @@
                                 <img src="../Images/stylistes/styliste2.jpg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Annabelle</p>
-                                        <p style="font-size: 1.2vw;">Annabelle est une artiste. Elle nous vient d'Italie où elle
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Annabelle</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Annabelle est une artiste. Elle nous vient d'Italie où elle
                                         a notemment travaillé pour Giorgio Armani pendant 7 ans et à pu se spécialiser dans 
                                         la confaction de costumes en tout genre. Sa grande connaissance du stylisme moderne fait 
                                         d'elle un pilier de la compagnie et un modèle pour ses collègues.</p>
@@ -348,8 +348,8 @@
                                 <img src="../Images/stylistes/styliste 4.jpeg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Stéphane</p>
-                                        <p style="font-size: 1.2vw;">Stéphane c'est quelqu'un de jovial avec le souci du détail. 
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Stéphane</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Stéphane c'est quelqu'un de jovial avec le souci du détail. 
                                             Il prend du temps dans la confection de ce qu'il fait et le fait bien. 
                                             Dès votre renconte, vous serez surpris du sérieux dont il fait preuve 
                                             dans l'accomplissement de ses tâches. Pour tout ce qui est accessoires à ajouter à votre 
@@ -363,8 +363,8 @@
                                 <img src="../Images/stylistes/styliste3.jpg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Moustapha</p>
-                                        <p style="font-size: 1.2vw;">Moustapha c'est le talent. Avec lui le ciel est la limite. Récemment diplomé d'un
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Moustapha</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Moustapha c'est le talent. Avec lui le ciel est la limite. Récemment diplomé d'un
                                             master en arts, il est notre deuxième spécialiste en tout genre. Que ce
                                             soit pour vos costumes de soirée, costume de mariage, ou tout simplement quelque chose de chic et 
                                             décontracté, il est l'homme de la situation. Sa grande versatilité et sa vision hors du commun 
@@ -376,8 +376,8 @@
                                 <img src="../Images/stylistes/styliste5.jpeg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Ernesto</p>
-                                        <p style="font-size: 1.2vw;">Ernesto est un artisant de la simplicité. spécialiste
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Ernesto</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Ernesto est un artisant de la simplicité. spécialiste
                                             du lin et de sa manipulation, il saura aller chercher grâce à son expertise aquise au 
                                             cours de huit années d'expérience la conception parfaite pour vous.
                                             Son sens de l'humour toujours aiguisé saura vous faire passer un moment agréable tout au long 
@@ -390,13 +390,13 @@
                                 <img src="../Images/stylistes/styliste 6.jpg" height="100%" width="100%" alt="shinji">
                                 <div class="position-absolute imagetxt" style="text-align: center;">
                                     <div class="d-block position-absolute">
-                                        <p style="font-size: 1.7vw;">Marta</p>
-                                        <p style="font-size: 1.2vw;">Marta c'est le goût pour l'élégance, le beau, le chic. C'est aussi une
+                                        <p class="imagetxt_title" style="font-size: 1.7vw;">Marta</p>
+                                        <p class="imagetxt_p" style="font-size: 1.2vw;">Marta c'est le goût pour l'élégance, le beau, le chic. C'est aussi une
                                             spécialiste en tout genre mais qui excelle surtout de la confection de smokings et de costumes tweed.
                                             Elle a su perfectionner son art grâce à vingt années d'expérience acquises dans différentes maisons de mode du globe.
                                             C'est une personne charmente ayant pour seul but aller au-délà de vos attentes. Elle saura vous ravir 
                                             par son sourire enthousiasme et la qualité du travail qu'elle fournie.
-                                    </p>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
