--- a/Pages/booking.html
+++ b/Pages/booking.html
@@ -127,7 +127,7 @@
                             </div>
                             <div id="adress" class="booking-elem d-none">
                                 <label for="name">Votre adresse</label>
-                                <input type="text" id="adr" name="client_adress" placeholder="1 rue john doe" pattern=[A-Z\sa-z]{3,20}>
+                                <input type="text" id="adr" name="client_adress" placeholder="1 rue john doe">
                             </div>
                             <div class="row booking-row">
                                 <div class="col w-100 h-100">
