--- a/Pages/HandyMan.html
+++ b/Pages/HandyMan.html
@@ -229,7 +229,7 @@
                 </div>
                 <div class="col p-0 m-0 one">
                     <div class="ml-0 service-txt">
-                        <div class="d-block" style="text-align: center;">
+                        <div class="d-block service-txt-div" style="text-align: center;">
                             <div class="h2">Confection de costumes</div>
                             <p class="h5">
                                 La couture pour nous est un art. Laissez vous guider par
@@ -245,7 +245,7 @@
             <div class="row service-row text-white p-0 m-0">
                 <div class="col p-0 m-0 one">
                     <div class="mr-0 service-txt" style="background-color: #FDD000; color: black;">
-                        <div class="d-block" style="text-align: center;">
+                        <div class="d-block service-txt-div" style="text-align: center;">
                             <div class="h2">Retouche de costumes</div>
                             <p class="h5">
                                 La retouche de costumes est un service entièrement gratuit offert exclusivement à nos clients.
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col p-0 m-0 one">
                     <div class="service-txt ml-0">
-                        <div class="d-block" style="text-align: center;">
+                        <div class="d-block service-txt-div" style="text-align: center;">
                             <div class="h2">Nettoyage de costumes</div>
                             <p class="h5">
                                 Nous possédons un service de nettoyage sur place. Notre service
@@ -281,7 +281,7 @@
             <div class="row service-row text-white p-0 m-0">
                 <div class="col p-0 m-0 one">
                     <div class="service-txt mr-0" style="background-color: #FDD000; color: black;">
-                        <div class="d-block" style="text-align: center;">
+                        <div class="d-block service-txt-div" style="text-align: center;">
                             <div class="h2">Parlez avec un de nos stylistes</div>
                             <p class="h5">
                                 Vous n'êtes pas sûr de quel modèle choisir ? Vous aimerez savoir quels matériaux
@@ -308,8 +308,8 @@
                     <div class="col d-none d-lg-block"></div>
                 </div>
                 <div class="flex-container">
-                    <div class="text-white p-4 mb-4" style="text-align: center;">
-                        <p id="abt-us" class="h5">HandyMan est une entreprise de stylisme spécialisée dans 
+                    <div id="abt-us" class="text-white p-4 mb-4" style="text-align: center;">
+                        <p class="h5">HandyMan est une entreprise de stylisme spécialisée dans 
                             dans la confection de vestes pour hommes (16+). Possédans 16 ans d'expérience 
                             dans le domaine, la compagnie est aujourd'hui une incontournable du monde du stylisme
                                 dans la grande région d'Halifax et du Canada en général. Cette équipe passionée qui compte 
