--- a/Pages/booking.html
+++ b/Pages/booking.html
@@ -191,7 +191,7 @@
                         <div class="flex-container">
                             <div>
                                 <h3>Grille de prix</h3>
-                                <p class="h5 mt-3">Les prix indiqué ci-dessous ne le sont qu'à titre indicatif et peuvent
+                                <p class="h5 mt-3" style="text-align: justify;">Les prix indiqué ci-dessous ne le sont qu'à titre indicatif et peuvent
                                     être sujets à changement lors du rendez-vous. Taxes non incluses.
                                 </p>
                             </div>
