--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://neronemesis.github.io/Pages/HandyMan.html">
+<meta http-equiv="refresh" content="0; url=https://neronemesis.github.io/">
